--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,3 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
+@import url('./gallery.css');
 @import url('./reset.css');
 @import url('./base.css');
-
